# florida-predictor

./: pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: main.py
